2007-09-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore, Makefile, init.c, osmonweb.c, osmonweb_int.h: Now works
	ok with both GoAhead and Simple HTTPD.
	* osmonweb_ITRON_objs.c, osmonweb_POSIX_objs.c, osmonweb_RTEID_objs.c,
	osmonweb_goahead.c, osmonweb_shttpd.c, osmonweb_tar.c: New files.

2007-09-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore, Makefile: Now generate the XXX_objs.[ch] from htmlsrc and
	recognize this in the Makefile.
	* ITRON_objs.c, ITRON_objs.h, osmonweb_ITRON_objs.c,
	osmonweb_ITRON_objs.h, osmonweb_POSIX_objs.c, osmonweb_POSIX_objs.h,
	osmonweb_RTEID_objs.c, osmonweb_RTEID_objs.h: Removed.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Take out hard-coded RTEMS_MAKEFILE_PATH.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Increase stack size for shttpd to 48K.
	* osmonweb.c: Turn off some VERY noisy debug output. Clean up
	osmonweb_WriteBlock() and watch it work.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile, osmonweb.c, osmonweb_RTEID.c, osmonweb_int.h: Remove JOEL
	conditionals which disabled parts of the code dependent on monitor
	enhancements which Thomas just merged. Clean up various warnings.
	* .cvsignore, html/.cvsignore: New files.
